<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".view.activity.HabitCreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:layout_centerVertical="true"
                    android:tint="@color/white"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_habit"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/white" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rcv_date_item_shape_default"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvEmojiPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/name_of_habit_cap"
                    android:textColor="@android:color/white"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rcv_date_item_shape_default"
                android:padding="8dp">

                <EditText
                    android:id="@+id/tvHabitName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:hint="@string/enter_habit_name_hint"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rcv_date_item_shape_default"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/icon_cap"
                    android:textColor="@android:color/white"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/bigCircle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_shape"
                    android:gravity="center"
                    android:text="&#x1F600;"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp" />

                <Button
                    android:id="@+id/btnEditEmojiButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@id/bigCircle"
                    android:background="@drawable/circle_shape"
                    android:backgroundTint="#525252"
                    android:drawableStart="@drawable/icon_edit"
                    android:drawablePadding="8dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rcv_date_item_shape_default"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/time_of_week_cap"
                    android:textColor="@android:color/white"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_HabitTimeOfWeek"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rcv_date_item_shape_default"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/time_of_date_cap"
                    android:textColor="@android:color/white"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHabitTimeOfDate"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thêm thói quen"
                android:layout_margin="10dp">

            </Button>

        </LinearLayout>
    </LinearLayout>

    </ScrollView>



</LinearLayout>